<resources>
    <string name="app_name">Laboratorio Fisica 1</string>
    <string name="action_settings">Settings</string>

    <string name="cinematica">Cinematica</string>
    <string name="mcu">MCU</string>
    <string name="energia">Energia</string>
    <string name="colisiones">Colisiones</string>

    <string name="calcTeorica">Calculo Teorico</string>
    <string name="radio">Ingresar radio</string>
    <string name="periodo">Ingrese el periodo</string>
    <string name="calcular">Calcular</string>
    <string name="velTeorica">Velocidad teorica</string>
    <string name="despeje">Despeje de formula</string>
    <string name="irMedExperimental">Ir a Medición Experimental</string>
    <string name="medExperimental">Velocidad experimental</string>
    <string name="longObject">Longitud del objeto</string>
    <string name="desLonObject">se ingrisa la longitud del objeto a medir</string>
    <string name="tiempo">Tiempo</string>
    <string name="velexperimental">Velocidad experimental</string>
    <string name="irErrRelativo">ir a error relativo</string>
    <string name="errRelativo">Error relativo</string>
    <string name="expErrRelativo">Expresion E.R</string>
    <string name="msgErrorRrelativo">El error relativo es:</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="start">Vamos !</string>

    <string name="slide_1_title">MCU</string>
    <string name="slide_1_desc"> * Modelo Teorico</string>
    <string name="slide_1_desc2">* Modelo Experimental</string>
    <string name="slide_1_desc3">* Error relativo</string>

    <string name="slide_2_title"></string>
    <string name="slide_2_desc">En un movimiento circular uniforme la velocidad del móvil es constante y tangente a la trayectoria circular
</string>

    <string name="slide_3_title">Expresiones</string>
    <string name="slide_3_desc">La expresión para calcular la rapidez en mov. Circular es:
</string>

    <string name="slide_4_title">Periodo (p)</string>
    <string name="slide_4_title2">Radio (r)</string>
    <string name="slide_4_desc">Tiempo que tarda el objeto en dar una vuelta</string>
    <string name="slide_4_desc2">Medir el radio de la circunferencia descrita en el ejercicion</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity__calc__teorica">Calculo teorico</string>
    <string name="title_activity_result_teorico">Resultado teorico</string>
    <string name="title_activity_calc_experimental">Velocidad experimental</string>
    <string name="title_activity_calc_error_relativo">Error relativo</string>


</resources>
