<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutprincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tesis.orca.laboratoriofisica1.Activity_calc_experimental"
    tools:showIn="@layout/activity_calc_experimental">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medExperimental"
            android:textAlignment="center"
            android:textSize="@dimen/titulos" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longObject"
            android:textAlignment="center"
            android:textSize="@dimen/etiquetas" />

        <EditText
            android:id="@+id/txtLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/textos" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:textAlignment="center"
            android:textSize="@dimen/etiquetas" />


        <EditText
            android:id="@+id/LblTiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/textos" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/velexperimental"
            android:textAlignment="center"
            android:textSize="@dimen/etiquetas" />


        <EditText
            android:id="@+id/LblResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/textos" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/irErrRelativo"
            android:textSize="@dimen/botones" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
